--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,9 +2,9 @@
 @import url(https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css);
 
 :root {
-  --background: #1c1c1c !important;
-  --foreground: #ffffff !important;
-  --accent: #b061ff !important;
+  --background: #1a170f !important;
+  --foreground: #eceae5 !important;
+  --accent: #a64dff !important;
   --radius: 0 !important;
   --font-size: 1rem !important;
   --line-height: 1.54em !important;
@@ -12,7 +12,7 @@
 [data-theme="dark"],
 [data-theme="light"] {
   --accent: #b061ff !important;
-  --background: #1c1c1c !important;
+  --background: #1a170f !important;
   --foreground: #ffffff !important;
 }
 
